--- a/api/v1/paths/users/_index.yaml
+++ b/api/v1/paths/users/_index.yaml
@@ -17,40 +17,23 @@ get:
         type: array
         items:
           $ref: "../../properties/role.yaml"
-    - name: offset
+    - name: page
       in: query
-      description: Сдвиг начала каждой страницы на указанное количество единиц.
+      description: Номер страницы
+      required: false
       schema:
         type: integer
-        minimum: 0
         default: 0
-    - name: limit
+        minimum: 0
+    - name: per_page
       in: query
-      description: Максимальное количество объектов, которое может вернуть запрос.
+      description: Количество элементов на странице
+      required: false
       schema:
         type: integer
-        minimum: 0
+        minimum: 1
         maximum: 100
-        default: 100
-    - name: sort
-      in: query
-      description: Определяет атрибут, по которому сортируются элементы.
-      schema:
-        type: string
-        enum:
-          - id
-        default: id
-    - name: direction
-      in: query
-      description: |-
-        Направление сортировки результатов.
-        Это может быть либо сортировка по возрастанию (ASC), либо сортировка по убыванию (DESC).
-      schema:
-        type: string
-        enum:
-          - ASC
-          - DESC
-        default: ASC
+        default: 100 
   responses:
     '200':
       description: Success
@@ -67,5 +50,7 @@ get:
                   oneOf:
                     - $ref: "../../schemas/RegularUser.yaml"
                     - $ref: "../../schemas/EmployeeUser.yaml"
+              pagination:
+                $ref: "../../schemas/Pagination.yaml"
     default:
       $ref: "../../responses/Error.yaml"
