--- a/api/bundle.yaml
+++ b/api/bundle.yaml
@@ -1797,9 +1797,14 @@ paths:
       tags:
         - organizations
       summary: Get all of organization tenders
-      description: if user is in organization it also returns all drafts
+      description: |-
+        **Без JWT или с ролью "User"**: 
+        Возвращает тендеры только со статусом "Approved".
+
+        **Если "User" состоит в организации:** возразщает все тендеры (с черновиками).
       security:
         - bearerAuth: []
+        - {}
       parameters:
         - name: organizationID
           required: true
@@ -1809,6 +1814,23 @@ paths:
             type: integer
             minimum: 1
           example: 1
+        - name: page
+          in: query
+          description: Номер страницы
+          required: false
+          schema:
+            type: integer
+            default: 0
+            minimum: 0
+        - name: per_page
+          in: query
+          description: Количество элементов на странице
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 100
+            default: 100
       responses:
         '200':
           description: Success
@@ -1818,11 +1840,14 @@ paths:
                 type: object
                 required:
                   - data
+                  - pagination
                 properties:
                   data:
                     type: array
                     items:
                       $ref: '#/components/schemas/Tender'
+                  pagination:
+                    $ref: '#/components/schemas/Pagination'
         default:
           $ref: '#/components/responses/Error'
   /v1/verifications/{requestID}/aprove:
