--- a/api/v1/paths/organizations/_id/tenders.yaml
+++ b/api/v1/paths/organizations/_id/tenders.yaml
@@ -2,9 +2,14 @@ get:
   tags:
     - organizations
   summary: Get all of organization tenders
-  description: if user is in organization it also returns all drafts
+  description: |-
+     **Без JWT или с ролью "User"**: 
+     Возвращает тендеры только со статусом "Approved".
+
+     **Если "User" состоит в организации:** возвращает все тендеры (с черновиками).
   security:
   - bearerAuth: []
+  - {}  
   parameters:
     - name: organizationID
       required: true
@@ -14,6 +19,23 @@ get:
         type: integer
         minimum: 1
       example: 1
+    - name: page
+      in: query
+      description: Номер страницы
+      required: false
+      schema:
+        type: integer
+        default: 0
+        minimum: 0
+    - name: per_page
+      in: query
+      description: Количество элементов на странице
+      required: false
+      schema:
+        type: integer
+        minimum: 1
+        maximum: 100
+        default: 100
   responses:
     '200':
       description: Success
@@ -23,10 +45,13 @@ get:
             type: object
             required:
               - data
+              - pagination
             properties:
               data:
                 type: array
                 items:
                   $ref: "../../../schemas/Tender.yaml"
+              pagination:
+                $ref: "../../../schemas/Pagination.yaml"
     default:
       $ref: "../../../responses/Error.yaml"
