--- a/api/v1/schemas/Portfolio.yaml
+++ b/api/v1/schemas/Portfolio.yaml
@@ -1,7 +1,7 @@
 type: object
 required:
   - id
-  - name
+  - title
   - description
   - attachments
   - created_at
@@ -9,8 +9,9 @@ properties:
   id:
     type: integer
     example: 123
-  name:
-    $ref: "../properties/name.yaml"
+  title:
+   type: string
+   example: Портфолио
   description:
     $ref: "../properties/description.yaml"
   attachments:
