--- a/api/bundle.yaml
+++ b/api/bundle.yaml
@@ -1446,13 +1446,26 @@ paths:
                   example:
                     - 1
                     - 2
-                service_ids:
+                services:
                   type: array
                   items:
-                    type: integer
-                  example:
-                    - 1
-                    - 2
+                    type: object
+                    required:
+                      - service_id
+                      - measure_id
+                      - price
+                    properties:
+                      service_id:
+                        type: integer
+                      measure_id:
+                        type: integer
+                      price:
+                        type: number
+                        format: float
+                    example:
+                      service_id: 1
+                      measure_id: 1
+                      price: 500
                 objects_ids:
                   type: array
                   items:
@@ -1797,7 +1810,7 @@ paths:
         **Без JWT или с ролью "User"**: 
         Возвращает тендеры только со статусом "Approved".
 
-        **Если "User" состоит в организации:** возразщает все тендеры (с черновиками).
+        **Если "User" состоит в организации:** возвращает все тендеры (с черновиками).
       security:
         - bearerAuth: []
         - {}
@@ -2145,6 +2158,30 @@ paths:
                 properties:
                   data:
                     $ref: '#/components/schemas/Region'
+        default:
+          $ref: '#/components/responses/Error'
+  /v1/catalog/measurements:
+    get:
+      tags:
+        - catalog
+      summary: Retrieve all measurements
+      description: Возвращает список измерений
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - data
+                properties:
+                  data:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Measure'
         default:
           $ref: '#/components/responses/Error'
   /v1/comments/verifications:
@@ -2860,6 +2897,32 @@ components:
           description: Локации заказчика
           items:
             $ref: '#/components/schemas/City'
+    Measure:
+      type: object
+      required:
+        - id
+        - name
+      properties:
+        id:
+          type: integer
+          example: 1
+        name:
+          type: string
+          example: м²
+    ServiceWithPrice:
+      type: object
+      required:
+        - service
+        - measure
+        - price
+      properties:
+        service:
+          $ref: '#/components/schemas/Service'
+        measure:
+          $ref: '#/components/schemas/Measure'
+        price:
+          type: number
+          format: float
     ContractorInfo:
       type: object
       properties:
@@ -2871,7 +2934,9 @@ components:
           items:
             $ref: '#/components/schemas/City'
         services:
-          $ref: '#/components/schemas/Services'
+          type: array
+          items:
+            $ref: '#/components/schemas/ServiceWithPrice'
         objects:
           $ref: '#/components/schemas/Objects'
     Portfolio:
