--- a/api/v1/paths/verifications/additions.yaml
+++ b/api/v1/paths/verifications/additions.yaml
@@ -1,9 +1,9 @@
 get:
   tags:
-    - organizations
-  summary: Get verification requests
+    - verifications
+  summary: Get comments verification requests
   description: |-
-    Get verifications
+    Получение запросов на верификацию для дополнительной информации о тендерах
 
     **[Role](https://youtrack.ubrato.ru/articles/UBR-A-7/Roli-privilegii) required**:
     'Employee' or higher.
