--- a/api/v1/paths/verifications/organization/_index.yaml
+++ b/api/v1/paths/verifications/organization/_index.yaml
@@ -1,9 +1,9 @@
 get:
   tags:
-    - tenders
-  summary: Get verification requests
+    - verifications
+  summary: Get organization verification requests
   description: |-
-    Get verifications
+    Получение всех запросов на верификацию для организаций
 
     **[Role](https://youtrack.ubrato.ru/articles/UBR-A-7/Roli-privilegii) required**:
     'Employee' or higher.
@@ -16,7 +16,7 @@ get:
       schema:
         type: array
         items:
-          $ref: "../../properties/verification_status.yaml"
+          $ref: "../../../properties/verification_status.yaml"
     - name: page
       in: query
       description: Номер страницы
@@ -48,8 +48,8 @@ get:
               data:
                 type: array
                 items:
-                  $ref: "../../schemas/VerificationRequest.yaml"
+                  $ref: "../../../schemas/VerificationRequest.yaml"
               pagination:
-                $ref: "../../schemas/Pagination.yaml"
+                $ref: "../../../schemas/Pagination.yaml"
     default:
-      $ref: "../../responses/Error.yaml"
+      $ref: "../../../responses/Error.yaml"
